--- a/index.html
+++ b/index.html
@@ -16,26 +16,29 @@
     </nav>
     <div class="gameContainer">
       <div class="container">
-        <div class="box bt-0 bl-0"><span class="boxtext">x</span></div>
-        <div class="box bt-0 br-"><span class="boxtext">x</span></div>
-        <div class="box bt-0 br-0"><span class="boxtext">x</span></div>
-        <div class="box bl-0"><span class="boxtext">x</span></div>
-        <div class="box"><span class="boxtext">x</span></div>
-        <div class="box br-0"><span class="boxtext">x</span></div>
-        <div class="box bb-0 bl-0" ><span class="boxtext">x</span></div>
-        <div class="box bb-0"><span class="boxtext">x</span></div>
-        <div class="box bb-0 br-0"><span class="boxtext">x</span></div>
+        <div class="box bt-0 bl-0"><span class="boxtext" id="1"></span></div>
+        <div class="box bt-0 br-"><span class="boxtext" id="2"></span></div>
+        <div class="box bt-0 br-0"><span class="boxtext" id="3"></span></div>
+        <div class="box bl-0"><span class="boxtext" id="4"></span></div>
+        <div class="box"><span class="boxtext" id="5"></span></div>
+        <div class="box br-0"><span class="boxtext" id="6"></span></div>
+        <div class="box bb-0 bl-0" ><span class="boxtext" id="7"></span></div>
+        <div class="box bb-0"><span class="boxtext" id="8"></span></div>
+        <div class="box bb-0 br-0"><span class="boxtext" id="9"></span></div>
       </div>
       <div class="gameInfo">
         <h1>Welcome to the game of Tic - tac - toe</h1>
         <div>
             <div>
                 <span class="info"></span>
-                <button id="reset">reset</button>
+                <button id="reset">RESET</button> 
+                <br>
+                <br>
+                <button id="switch">Switch</button>
             </div>
         </div>
         <div class="imgBox">
-            <img src="winCelebration2.webp" alt="img">
+            <img src="winCelebration2.webp" alt="img" id="imgWin">
         </div>
       </div>
     </div>
