--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         <div>
             <div>
                 <span class="info"></span>
-                <button id="reset">RESET</button> 
-                <br>
-                <br>
-                <button id="switch">Switch</button>
+                <div class="button">
+                  <button id="reset">RESET</button> 
+                  <button id="switch">Switch</button>
+                </div>
+                
             </div>
         </div>
         <div class="imgBox">
