better ui and reset and switch improved

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
         <div class="imgBox">
             <img src="winCelebration2.webp" alt="img" id="imgWin">
+            <img src="lose.webp" alt="img" id="lose" style="width: 0px;">
         </div>
       </div>
     </div>
